Update JsonHelper.java